Fix: typo in translation

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -114,8 +114,8 @@
     "DEADLINE": "Deadline",
     "SCHEDULE": "Schedule",
     "TEMPORARY": "Temporary",
-    "SUBJECT": "subject",
-    "MESSAGE": "message",
+    "SUBJECT": "Subject",
+    "MESSAGE": "Message",
     "YOUVE_ALREADY_SELECTED_THE_TAG_TAGNAME": "You've already selected the tag '{{tagName}}'",
     "WARNING": "warning",
     "TAGS": "tags",
